# the-corpus-as-a-network

./: .gitignore  CITATION.cff  LICENSE  README.md  codemeta.json  pyproject.toml  requirements.txt
data/: authors.feather
docs/: index.html  the-corpus-as-a-network.slides.html
notebooks/: the-corpus-as-a-network.ipynb
references/: references.bib
