[tool.poetry]
name = "the-corpus-as-a-network"
version = "0.1.0"
description = "For the research project 'The Evolution of Internet Governance' at the University of Bern, a corpus was compiled. The born digital sources date from the years between 1969 and 1999 and are relatively homogeneous. This allowed to build different network representations (graphs) of the indicated human and non-human actors, locations and events from the corpus using NLP (rule-based annotations as well as automated Named Entity Recognition). The process of annotating the corpus and constructing bipartite graphs is the subject of this lecture."
authors = ["Moritz Mähr <moritz.maehr@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "the_corpus_as_a_network"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
requests = "^2.31.0"
networkx = {extras = ["all"], version = "^2.8.8"}
spacy = "^3.4.3"
jupyter = "^1.0.0"
rich = "^12.6.0"
matplotlib = "^3.6.2"
pyarrow = "^14.0.1"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.177"
black = {extras = ["jupyter"], version = "^24.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
